# RepoIQ

./: README.md
client/: package.json  tsconfig.app.json  vite.config.ts
client/src/: App.tsx  index.css  types.ts
client/src/components/: ChatWindow.tsx  IngestPanel.tsx  RepoSelector.tsx  ResumeAnalysisPanel.tsx  ResumeMatchPanel.tsx  SummaryPanel.tsx
client/src/hooks/: useIngest.ts
client/src/lib/: utils.ts
client/src/pages/: Home.tsx
client/src/services/: api.ts
server/: .env  .gitignore  config.py  main.py  pyproject.toml  requirements.txt
server/cache/: techwithstevie__all_MiniLM_L6_v2.evidence.json  techwithstevie__all_MiniLM_L6_v2.stats.json  techwithstevie__all_MiniLM_L6_v2.summary.json
server/chroma_db/6d4876a8-8717-4cfc-9e4a-55e2db877efe/: index_metadata.pickle
server/routers/: health.py  match.py  query.py  repos.py
server/services/: cache_service.py  git_service.py  llm_service.py  rag_service.py  stats_service.py
