[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.5.9",
    "fastapi==0.111.0",
    "gitpython==3.1.43",
    "langchain>=1.3.13",
    "langchain-community>=0.4.2",
    "langchain-ollama>=1.1.0",
    "langchain-text-splitters>=1.1.2",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.6.0",
    "uvicorn[standard]>=0.51.0",
]
